--- a/css/product.css
+++ b/css/product.css
@@ -56,6 +56,10 @@ html, body {
   color: var(--clr-dark-gray);
 }
 
+.catalog-nav a:hover {
+  text-decoration: underline;
+}
+
 .catalog-nav > a {
   font-size: 1.5em;
   color: var(--clr-main-dark);
