--- a/css/product.css
+++ b/css/product.css
@@ -19,10 +19,11 @@ html, body {
   display: none;
 }
 
-.content {
+.content.product-page {
   display: grid;
   grid-template-columns: 1fr 3fr;
   padding: 0 30px;
+  max-width: 100%;
 }
 
 .filter {
@@ -94,6 +95,7 @@ html, body {
   padding: 20px 30px;
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .catalog-title .title {
@@ -102,7 +104,7 @@ html, body {
   color: var(--clr-main-dark);
 }
 
-.grid-col-2 {
+.grid-col-2.product-page {
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -113,11 +115,12 @@ html, body {
   outline: none;
 }
 
-.product-catalog {
+.product-catalog.product-page {
   padding: 30px 30px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
+  width: 100%;
 }
 
 .product-catalog-container {
@@ -126,7 +129,7 @@ html, body {
   padding-bottom: 20px;
 }
 
-.product {
+.product.product-page {
   border: 1px solid lightgray;
   transition: 300ms;
   padding: 20px;
@@ -136,6 +139,7 @@ html, body {
   background-color: white;
   cursor: pointer;
   height: 100%;
+  width: 100%;
 }
 
 .product:hover {
@@ -203,18 +207,18 @@ html, body {
 }
 
 @media (max-width: 1350px) {
-  .product-catalog {
+  .product-catalog.product-page {
     display: flex;
     flex-wrap: wrap;
   }
 
-  .product-cell {
+  .product.product-page {
     width: 32%;
   }
 }
 
 @media (max-width: 1020px) {
-  .content {
+  .content.content.product-page {
     display: flex;
     flex-direction: column;
     padding: 10px;
@@ -225,23 +229,23 @@ html, body {
     flex-wrap: wrap;
   }
 
-  .product-catalog {
+  .product-catalog.product-page {
     display: flex;
     flex-wrap: wrap;
   }
 
-  .product-cell {
+  .product.product-page {
     width: 32%;
   }
 }
 
 @media (max-width: 720px) {
-  .product-catalog {
+  .product-catalog.product-page {
     display: flex;
     flex-wrap: wrap;
   }
 
-  .product-cell {
+  .product.product-page {
     width: 48%;
   }
 
@@ -250,7 +254,7 @@ html, body {
     box-shadow: none;
   }
 
-  .product-catalog {
+  .product-catalog.product-page {
     padding: 10px;
   }
 
@@ -275,13 +279,13 @@ html, body {
 }
 
 @media (max-width: 350px) {
-.product-catalog {
+.product-catalog.product-page {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
   }
 
-  .product-cell {
+  .product.product-page {
     width: 95%;
   }
 }
