--- a/css/main.css
+++ b/css/main.css
@@ -259,7 +259,7 @@ button:hover svg {
   display: flex;
   align-items: center;
   gap: 10px;
-  display: none;
+  /* display: none; */
 }
 
 .greeting {
@@ -677,7 +677,7 @@ footer img {
   display: none;
 }
 
-.overlay {
+/* .overlay {
   position: fixed;
   inset: 0 0 0 0;
   background-color: hsla(0, 0%, 100%, 0.2);
@@ -686,7 +686,7 @@ footer img {
   align-items: center;
   justify-content: center;
   display: none;
-}
+} */
 
 .modal {
   background-color: white;
@@ -1029,4 +1029,26 @@ footer img {
   .footer-1 {
     grid-template-columns: 1fr 1fr;
   }
+}
+
+#register_overlay {
+  position: fixed;
+  inset: 0 0 0 0;
+  background-color: hsla(0, 0%, 100%, 0.2);
+  z-index: 1000;
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+#login_overlay {
+  position: fixed;
+  inset: 0 0 0 0;
+  background-color: hsla(0, 0%, 100%, 0.2);
+  z-index: 1000;
+  /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  display: none;
 }
