--- a/css/admin.css
+++ b/css/admin.css
@@ -1,44 +1,166 @@
 *{
     box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        font-family: "Roboto", sans-serif;
-        font-size: 14px;
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    --clr-main-light: #bcbd8b;
+    --clr-main-dark: #283618;
+    --clr-background: #fefae0;
 }
-html,
-body {
-    background-color: white;
+body{
+    background-color: #e6e8ed;
 }
-.container {
-    width: 100%;
-    height: max-content;
+a {
+    text-decoration: none;
+    color: black;
+}
+.material-icons-outlined {
+    vertical-align: middle;
+    line-height: 1px;
+    font-size: 30px;
+}
+.text-primary {
+    color: #666666;
+}
+.font-weight-bold{
+    font-weight: 600;
+}
+.grid-container {
     display: grid;
-    grid-template-columns: 300px 1fr 1fr 1fr;
+    grid-template-columns: 260px 1fr 1fr 1fr;
     grid-template-rows: 0.2fr 3fr;
-    grid-template-areas: 
-    "sidebar header header header"
-    "sidebar main main main" ;
-    height: 100vh;
+    grid-template-areas:
+        "sidebar header header header"
+        "sidebar main main main";
+    height: 100vh; 
+
 
 }
+
 /* ---------- HEADER ---------- */
 .header {
     grid-area: header;
-    background-color: #21232d;
+    background-color: #ffffff;
     height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px;
+    box-shadow: 0 10px 7px -4px rgba(0, 0, 0, 0.2);
 
 }
+.menu-icon {
+    display: none;
+}
+
 /* ---------- HEADER ---------- */
 
 /* ---------- SIDEBAR ---------- */
-.sidebar {
+#sidebar {
     grid-area: sidebar;
+    background-color: #31572c;
+    color: #000000;
+    height: 100%;
+    overflow-y: auto;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    
+}
+.sidebar-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    margin-bottom: 30px;
+}
+.sidebar-title > span{
+    display: none;
+}
+.sidebar-brand {
+    margin-top: 15px;
+    font-size: 2rem;
+    font-weight:bold;
+}
+.sidebar-list {
+    padding: 0;
+    margin-top: 15px;
+    list-style-type: none;
+   
+}
+.sidebar-list-item {
+    padding: 20px;
+}
+.sidebar-list-item:hover {
+    background-color: rgba(255,255,255,0.3);
+    cursor: pointer;
+}
+.sidebar-responsive {
+    display: inline !important;
+    position: absolute;
 }
 /* ---------- SIDEBAR ---------- */
 
 /* ---------- MAIN ---------- */
-.main{
+.main-container {
     grid-area: main;
+    overflow-y: auto;
+    padding: 20px;
+    
 }
-/* ---------- MAIN ---------- */
+.main-title {
+    display: flex;
+    justify-content: space-between;
+}
+.main-title > p{
+    font-size: 20px;
+}
+.main-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 20px 0;
+    
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 25px;
+    background-color: #ffffff;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 10px -4px rgba(0,0,0,0.2);
+}
+.card>span{
+    font-size: 20px;
+    font-weight: 600;
+}
 
+.card:first-child {
+    border-left: 7px solid #246dec;
+}
+
+.card:nth-child(2) {
+    border-left: 7px solid #f5b74f;
+}
+
+.card:nth-child(3) {
+    border-left: 7px solid #367952;
+}
+
+.card-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card-inner > p {
+    font-size: 18px;
+}
+
+.card-inner > span {
+    font-size: 35px;
+}
+
+
+/* ---------- MAIN ---------- */
