--- a/css/admin.css
+++ b/css/admin.css
@@ -116,7 +116,7 @@ a {
 }
 .main-cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     margin: 20px 0;
     
@@ -137,15 +137,18 @@ a {
 }
 
 .card:first-child {
-    border-left: 7px solid #246dec;
+border-left: 7px solid #d7263d;
 }
 
 .card:nth-child(2) {
-    border-left: 7px solid #f5b74f;
+    border-left: 7px solid #2e294e;
 }
 
 .card:nth-child(3) {
     border-left: 7px solid #367952;
+}
+.card:nth-child(4) {
+    border-left: 7px solid #e89005;
 }
 
 .card-inner {
@@ -164,3 +167,57 @@ a {
 
 
 /* ---------- MAIN ---------- */
+
+/* ---------- MEDIA QUERIES ---------- */
+/* Medium <= 992px  */
+@media screen and (max-width: 992px) {
+
+.grid-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 3fr;
+    grid-template-areas: 
+    "header"
+    "main";
+}
+
+#sidebar {
+    display: none;
+}
+.menu-icon {
+    display: inline;
+}
+.sidebar-title > span {
+    display: inline;
+}
+
+}
+
+/* Small <= 768px */
+@media screen and (max-width: 768px) {
+    .main-cards {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-bottom: 0;
+    }
+}
+
+/* ---------- SCROLLBARS ---------- */
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #a5aaad;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4f35a1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a5aaad;
+}
