--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,26 @@ ul {
   height: min-content;
 }
 
+.function #btn-basket {
+  position: relative;
+  --num-o-product: "0";
+}
+
+.function #btn-basket::after {
+  content: var(--num-o-product);
+  position: absolute;
+  top: -5px;
+  right: -8px;
+  color: white;
+  background-color: var(--clr-dark-yellow);
+  height: 1.1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100vh;
+  padding-inline: .25rem;
+}
+
 .search input {
   height: 30px;
   width: 100%;
@@ -246,7 +266,7 @@ button:hover svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: .25em .5em;
+  padding: 0.25em 0.5em;
 }
 
 .post-login {
@@ -411,7 +431,7 @@ button:hover svg {
 
 .sub-banner-2 a {
   border: 2px solid var(--clr-main-dark);
-  padding: .25rem 3em;
+  padding: 0.25rem 3em;
   font-weight: bold;
   text-align: center;
   cursor: pointer;
@@ -820,9 +840,9 @@ footer img {
   border: 1px solid var(--clr-focus-gray);
 }
 @media (max-width: 1300px) {
-.greeting {
-  display: none;
-}
+  .greeting {
+    display: none;
+  }
 
   #btn-about svg,
   #btn-delivery svg {
