--- a/css/main.css
+++ b/css/main.css
@@ -1054,6 +1054,12 @@ footer img {
   }
 }
 
+@media (max-width: 350px) {
+  .search:has(input:focus) {
+    position: fixed;
+  }
+}
+
 #register_overlay {
   position: fixed;
   inset: 0 0 0 0;
