--- a/css/admin.css
+++ b/css/admin.css
@@ -279,3 +279,162 @@ td:last-child  a:first-child {
 ::-webkit-scrollbar-thumb:hover {
     background-color: #a5aaad;
 }
+
+
+/* ---------- forms ---------- */
+#Update_overlay {
+    position: fixed;
+    inset: 0 0 0 0;
+    background-color: hsla(0, 0%, 100%, 0.2);
+    z-index: 1000;
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+    display: none;
+  }
+  
+  #add_overlay {
+    position: fixed;
+    inset: 0 0 0 0;
+    background-color: hsla(0, 0%, 100%, 0.2);
+    z-index: 1000;
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+    display: none;
+  }
+  
+  
+  .modal {
+    background-color: white;
+    padding: 30px 50px;
+    border-radius: 30px 0 30px 0;
+    border-top: 5px solid var(--clr-main-light);
+    border-left: 5px solid var(--clr-main-light);
+    border-bottom: 5px solid var(--clr-main);
+    border-right: 5px solid var(--clr-main);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 30%;
+    align-items: center;
+    min-width: 280px;
+    max-width: 450px;
+  }
+  
+  .modal form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+  }
+  
+  .btn-cancel {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--clr-main);
+    cursor: pointer;
+  }
+  
+  .btn-cancel:hover {
+    color: var(--clr-main-dark);
+  }
+  
+  .modal .title {
+    color: var(--clr-main-dark);
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.5rem;
+  }
+  
+  .modal .input {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  
+  .modal .input label {
+    font-weight: bold;
+    color: var(--clr-main-dark);
+  }
+  
+  .modal .input input {
+    padding: 0.25rem 0.5rem;
+    outline: none;
+    border: 1px solid var(--clr-main);
+    border-radius: 100vh;
+  }
+  
+  .modal .input input:hover {
+    border: 1px solid var(--clr-main-light);
+  }
+  
+  .modal .input input:focus {
+    outline: 2px solid var(--clr-main-dark);
+    border: 1px solid transparent;
+  }
+  
+  .modal button[type="submit"] {
+    border: 1px solid var(--clr-main);
+    margin-top: 10px;
+    border-radius: 100vh;
+    font-weight: bold;
+    color: white;
+    background-color: var(--clr-main);
+  }
+  
+  .modal button[type="submit"]:hover {
+    background-color: var(--clr-main-light);
+    border: 1px solid var(--clr-main-light);
+  }
+  
+  .modal button[type="submit"]:focus {
+    background-color: var(--clr-main-dark);
+    border: 1px solid var(--clr-main-dark);
+  }
+  
+  .modal .other-option {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top: 1px solid gray;
+    position: relative;
+    justify-content: start;
+    width: 90%;
+  }
+  
+  .modal .other-option::before {
+    content: "or";
+    color: gray;
+    position: absolute;
+    top: -10px;
+    background-color: white;
+    padding: 0 5px;
+  }
+  
+  .modal button[type="button"] {
+    border: 1px solid var(--clr-dark-gray);
+    border-radius: 100vh;
+    font-weight: bold;
+    color: white;
+    background-color: var(--clr-dark-gray);
+    width: 100%;
+  }
+  
+  .modal button[type="button"]:hover {
+    background-color: var(--clr-light-gray);
+    border: 1px solid var(--clr-light-gray);
+  }
+  
+  .modal button[type="button"]:focus {
+    background-color: var(--clr-focus-gray);
+    border: 1px solid var(--clr-focus-gray);
+  }
